@@ -1208,6 +1208,9 @@ $wgMessageStructure = array(
 		'deletionlog',
 		'reverted',
 		'deletecomment',
+		'deleteotherreason',
+		'deletereasonotherlist',
+		'deletereason-dropdown',
 		'rollback',
 		'rollback_short',
 		'rollbacklink',
